097 ==> 393777 - Item Tool Tips are unreadable in Windows 10 (white on yellow).
098 ==> 240237 - Not possible to rotate the image.
099 ==> 366446 - Creating new albums fails due to invalid path name.
100 ==> 369235 - Menu bar is not translated.
101 ==> 403132 - Lazy Update not working (or: Stop when I say so).
102 ==> 404797 - digikam-6.0.0-x86-64.appimage: stack trace shortly after startup.
103 ==> 405789 - Sidebar widths revert to their defaults after switching back from full-screen view.
104 ==> 405813 - Tab-View do not show Rating information.
105 ==> 404138 - can't connect to my account.
106 ==> 403819 - Export to Google Photos not working (bad request).
107 ==> 382367 - Unreadable light on light tooltip.
108 ==> 405825 - Feature request: "Video date" in XMP Metadata Editor.
109 ==> 405799 - Not possible to add collection.
110 ==> 389549 - "Clear all faces on this image" Does Not Remove All People Tags.
111 ==> 405904 - The saved version of the image is not linked to the original.
112 ==> 372308 - Buttons for rotate does not show very well.
113 ==> 375375 - Various bugs detecting and tagging faces in current 5.4.0 Digikam appimage.
114 ==> 405700 - Lensfun supported Camera is missing.
115 ==> 400140 - Digikam crash when exporting on google photos.
116 ==> 397744 - Face recognition not working.
117 ==> 398000 - Multi/batch rename fails almost every time.
118 ==> 396496 - QSQLITE -> MYSQL loses grouping information.
119 ==> 382311 - Photos in collapsed groups are incorrectly excluded if first photo in group does not match filter.
120 ==> 400981 - Appimage not working anymore: /lib64/libfontconfig.so.1: undefined symbol: FT_Done_MM_Var.
121 ==> 406054 - Export to google photo a picture with a "title" => no "title" in google photo.
122 ==> 254932 - New tool to export images as desktop wallpaper folder.
123 ==> 192020 - Tool to export as plasma backgrounds.
124 ==> 406171 - digiKam crashed on exit.
125 ==> 